[B]0.2[/B]
- Added subtitle support
- Better multipart detection

[B]0.1[/B]
- Initial working version