@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.vice" name="Vice.com" version="0.2" provider-name="paddycarey">
+<addon id="plugin.video.vice" name="Vice.com" version="0.3" provider-name="paddycarey">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
     <import addon="script.module.beautifulsoup"/>
